--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.6",
     "googleapis": "^140.0.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
+    "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "^1.5.2",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
