--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/forms": "^0.5.7",
     "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
